decoder: process the last block when closing

There might be a buffer still stored in packetizer buffers
refs: #3178